<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detail.DetailStoryActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/menubar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/actionbar_menu"
        app:title="@string/story_detail" />

    <ImageView
        android:id="@+id/storyImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:transitionName="storyImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menubar"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:transitionName="@string/judul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/storyImage"
        tools:text="@string/judul" />

    <TextView
        android:id="@+id/deskripsi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textSize="15sp"
        android:transitionName="deskripsi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/judul"
        app:layout_constraintTop_toBottomOf="@id/judul"
        tools:text="@string/deskripsi" />

</androidx.constraintlayout.widget.ConstraintLayout>